--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.3",
     "core-js": "^3.6.5",
+    "element-plus": "^1.1.0-beta.12",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.5",
     "vue-class-component": "^8.0.0-0",
